--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,13 @@ dependencies:
   wc_form_validators: ^1.0.1
   another_carousel_pro: ^1.0.2
   carousel_slider: ^4.2.1
+  flutter_clean_calendar: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  table_calendar: ^3.0.0
+  intl: ^0.17.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
