--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   another_carousel_pro: ^1.0.2
   carousel_slider: ^4.2.1
   flutter_clean_calendar: ^1.1.0
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
